# courseforces

./: .gitignore  CMakeLists.txt  CourseForces_ПЗ.docx  README.md  gen_pz.py
.claude/: settings.local.json
cli/: main.cpp
src/: main.cpp
src/application/use_cases/: CreateContestUseCase.cpp  CreateContestUseCase.h  CreateProblemUseCase.cpp  CreateProblemUseCase.h  JudgeSubmissionUseCase.cpp  JudgeSubmissionUseCase.h  LoginUserUseCase.cpp  LoginUserUseCase.h  RegisterUserUseCase.cpp  RegisterUserUseCase.h  SubmitSolutionUseCase.cpp  SubmitSolutionUseCase.h
src/domain/: Id.h
src/domain/entities/: Contest.cpp  Contest.h  Problem.cpp  Problem.h  Role.cpp  Role.h  Submission.cpp  Submission.h  TestCase.cpp  TestCase.h  User.cpp  User.h  Verdict.cpp  Verdict.h
src/domain/exceptions/: Exceptions.h
src/domain/repositories/: IContestRepository.h  IProblemRepository.h  ISubmissionRepository.h  IUserRepository.h
src/domain/services/: IJudge.h  IPasswordHasher.h
src/infrastructure/auth/: Sha256PasswordHasher.cpp  Sha256PasswordHasher.h
src/infrastructure/db/: SqlSchema.cpp  SqlSchema.h  SqliteContestRepository.cpp  SqliteContestRepository.h  SqliteProblemRepository.cpp  SqliteProblemRepository.h  SqliteSubmissionRepository.cpp  SqliteSubmissionRepository.h  SqliteUserRepository.cpp  SqliteUserRepository.h
src/infrastructure/judge/: CppJudge.cpp  CppJudge.h
src/interfaces/http/: ContestController.cpp  ContestController.h  ProblemController.cpp  ProblemController.h  SubmissionController.cpp  SubmissionController.h  UserController.cpp  UserController.h
tests/application/: CreateContestUseCaseTest.cpp  CreateProblemUseCaseTest.cpp  JudgeSubmissionUseCaseTest.cpp  LoginUserUseCaseTest.cpp  RegisterUserUseCaseTest.cpp  SubmitSolutionUseCaseTest.cpp
tests/domain/: ContestTest.cpp  ProblemTest.cpp  RoleTest.cpp  SubmissionTest.cpp  TestCaseTest.cpp  UserTest.cpp  VerdictTest.cpp
tests/fakes/: FakeJudge.h  FakePasswordHasher.h  InMemoryContestRepository.h  InMemoryProblemRepository.h  InMemorySubmissionRepository.h  InMemoryUserRepository.h
tests/infrastructure/: CppJudgeTest.cpp  Sha256PasswordHasherTest.cpp  SqliteProblemRepositoryTest.cpp  SqliteSubmissionRepositoryTest.cpp  SqliteUserRepositoryTest.cpp
web/: app.py
web/templates/: base.html  contest.html  contests.html  login.html  new_contest.html  new_problem.html  problem.html  problem_standalone.html  problems.html  register.html  submission.html  submissions.html
